fixes alignment

--- a/src/home.css
+++ b/src/home.css
@@ -22,18 +22,18 @@ body {
   margin-bottom: 20px;
 }
 
+@media (max-width: 575.98px) {
+  .col-5, .col-7 {
+    max-width: 100%;
+  }
+}
+
 #github-logo {
   max-height: 40px;
 }
 
 #flex {
   padding: 0;
-}
-
-@media (max-width: 767px) {
-  .col-5, .col-7 {
-    max-width: 80%;
-  }
 }
 
 /* Small devices (landscape phones, 576px and up) */
